# mimicry

./: .gitignore  Makefile  Manifest.toml  Project.toml  README.md  Viktor's readme.tex  build.jl  cars.jl  flake.nix  julia.nix  precompile.jl  project-description.nix  project-description.tex  pyproject.toml
.github/workflows/: latex2pdf.yml
src/: Agents.jl  Arena.jl  Lineages.jl  Mimicry.jl
src/mimicry/: car.py  cartpoles.py  data.py  feedforward.py  headless.py  mimicry.py  network.py  render.py  transformer.py  transformer_walkers.py  walkers.py
